Fixed mobile text overflow not working, fixed links, now they are atomic

--- a/css/style.scss
+++ b/css/style.scss
@@ -122,13 +122,14 @@ a:visited {
     }
 }
 /**********************************song view**********************************/
-.failMessage{
+
+.queryFail{
   width: 90%;
   margin: 20px auto 0px auto;
   text-align: center;
 }
 
-.songWrapper {
+.lyricsContainer {
     display: flex;
     flex-direction: column;
     align-items: space-between;
@@ -153,7 +154,7 @@ a:visited {
 }
 /*******************************lyrics view**********************************/
 .lyricsWrapper {
-    max-width: 100%;
+    width: 100%;
     margin-bottom: 20px;
 }
 
@@ -165,7 +166,10 @@ a:visited {
 }
 
 .lyrics {
-    text-overflow: clip;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: wrap;
+
     font-family: 'Inconsolata', monospace;
     text-align: center;
     font-size: 0.75rem;
